gson things starts to work as intended